--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "reddit"
+    "reddit",
+    "scraper",
+    "scrape",
+    "reddit-scraper",
+    "reddit-downloader",
+    "downloader"
   ],
   "author": "tanos",
   "license": "ISC",
